업무용 변경

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "manifest_version": 2,
   "content_scripts": [
     {
-      "matches": ["https://nhnent.dooray.com/*"],
+      "matches": ["https://*.dooray.com/*"],
       "run_at": "document_end",
       "css": ["notifications.css"],
       "js": ["contentScript.js"]
